Problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <nav>
         <a href="https://www.estudonauta.com/" target="_blank">Home</a>
         <a href="https://olhardigital.com.br/editorias/noticias/" target="_blank">Notícias</a>
-        <a href="https://www.youtube.com/watch?v=yPJJaggGIvU" target="_blank">Curiosidades</a>
-        <a href="https://www.linkedin.com/in/marcramos46/" target="_blank">Fale Conosco</a>
+        <a href="https://www.linkedin.com/in/marcramos46/" target="_blank">Contato</a>
     </nav>
     <main>
         <article>
